# dx_watermark

./: CHANGELOG_DUAL_METHOD.md  CMakeLists.txt  DEBUG_BMP_EXPORT.md  LINESIZE_PADDING_FIX.md  SHADER_BLENDING_FIX.md  TECHNICAL_DETAILS.md  TROUBLESHOOTING_FFMPEG.md  WATERMARK_SCALING_FIX.md  example_usage.bat  test_ffmpeg_method.bat  test_text_watermark.bat
include/: D3DProcessor.h  DXGICapture.h  FFmpegWatermarkProcessor.h  MouseHandler.h  ScreenRecorder.h  VideoProcessor.h  WatermarkRenderer.h
md/: COMPLETE_LINESIZE_FIX.md  ENCODING_FIX.md  FFMPEG_PROCESSING_LOGIC_EXPLAINED.md  NEW_FEATURE_SUMMARY.md  QUICK_ANSWER.md  README_WATERMARK_METHODS.md  TEXT_WATERMARK_GUIDE.md
shaders/: WatermarkPS.hlsl  WatermarkVS.hlsl
src/: D3DProcessor.cpp  DXGICapture.cpp  FFmpegWatermarkProcessor.cpp  MouseHandler.cpp  ScreenRecorder.cpp  VideoProcessor.cpp  WatermarkRenderer.cpp  main.cpp
